feat: sistema de amizades, compartilhamento de eventos e notificações reais
- Adiciona campo `username` único ao usuário (cadastro, login, perfil)
- Sistema de amizades: solicitar, aceitar, recusar por @username
- Compartilhamento de eventos com amigos (eventos fixados no topo do feed)
- Notificações reais: solicitação de amizade, amizade aceita, evento compartilhado
  com badge de contagem no header/nav e ações inline (aceitar/recusar)
- Melhoria de responsividade desktop: max-w-6xl no feed (grade 3 colunas),
  header centralizado, padding e títulos consistentes em todas as páginas

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>