@@ -3,15 +3,22 @@ package com.coopa.application.evento;
 import com.coopa.application.auth.AuthService;
 import com.coopa.application.evento.dto.EventoRequestDTO;
 import com.coopa.application.evento.dto.EventoResponseDTO;
+import com.coopa.domain.amizade.Amizade;
+import com.coopa.domain.amizade.AmizadeRepository;
 import com.coopa.domain.auth.User;
 import com.coopa.domain.evento.Evento;
+import com.coopa.domain.evento.EventoCompartilhado;
+import com.coopa.domain.evento.EventoCompartilhadoRepository;
 import com.coopa.domain.evento.EventoRepository;
 import com.coopa.domain.inscricao.InscricaoRepository;
+import com.coopa.domain.notificacao.Notificacao;
+import com.coopa.domain.notificacao.NotificacaoRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,12 +27,35 @@ public class EventoService {
 
     private final EventoRepository eventoRepository;
     private final InscricaoRepository inscricaoRepository;
+    private final EventoCompartilhadoRepository compartilhadoRepository;
+    private final AmizadeRepository amizadeRepository;
+    private final NotificacaoRepository notificacaoRepository;
     private final AuthService authService;
 
     public List<EventoResponseDTO> listarAtivos(String userId) {
-        return eventoRepository.findByAtivoTrueOrderByCriadoEmDesc().stream()
-                .map(e -> toDTO(e, userId))
-                .toList();
+        List<Evento> ativos = eventoRepository.findByAtivoTrueOrderByCriadoEmDesc();
+
+        // Mapear quais eventos foram compartilhados com este usuário
+        Map<String, String> compartilhadosPorMim = new HashMap<>();
+        if (userId != null) {
+            compartilhadoRepository.findByDestinatarioId(userId).forEach(c ->
+                    compartilhadosPorMim.put(c.getEventoId(), c.getRemetenteNome()));
+        }
+
+        // Converter para DTO, marcando compartilhados
+        List<EventoResponseDTO> result = ativos.stream()
+                .map(e -> toDTOCompartilhado(e, userId, compartilhadosPorMim))
+                .collect(Collectors.toList());
+
+        // Ordenar: compartilhados primeiro, depois por data de criação desc
+        result.sort((a, b) -> {
+            if (a.compartilhadoComigo() && !b.compartilhadoComigo()) return -1;
+            if (!a.compartilhadoComigo() && b.compartilhadoComigo()) return 1;
+            return Long.compare(b.criadoEm() != null ? b.criadoEm() : 0,
+                                a.criadoEm() != null ? a.criadoEm() : 0);
+        });
+
+        return result;
     }
 
     public EventoResponseDTO buscarPorId(String id, String userId) {
@@ -114,11 +144,57 @@ public class EventoService {
                 .orElseThrow(() -> new IllegalArgumentException("Evento não encontrado"));
     }
 
+    public void compartilhar(String eventoId, String destinatarioId, String remetenteId) {
+        Evento evento = getEvento(eventoId);
+        if (!evento.isAtivo()) {
+            throw new IllegalArgumentException("Evento não está ativo");
+        }
+
+        // Verificar amizade
+        amizadeRepository.findByPar(remetenteId, destinatarioId)
+                .filter(a -> a.getStatus() == Amizade.StatusAmizade.ACEITA)
+                .orElseThrow(() -> new IllegalArgumentException("Vocês precisam ser amigos para compartilhar eventos"));
+
+        if (compartilhadoRepository.existsByEventoIdAndDestinatarioId(eventoId, destinatarioId)) {
+            throw new IllegalArgumentException("Evento já foi compartilhado com este amigo");
+        }
+
+        User remetente = authService.getById(remetenteId);
+
+        EventoCompartilhado compartilhado = EventoCompartilhado.builder()
+                .eventoId(eventoId)
+                .remetenteId(remetenteId)
+                .remetenteNome(remetente.getNome())
+                .destinatarioId(destinatarioId)
+                .criadoEm(System.currentTimeMillis())
+                .build();
+        compartilhadoRepository.save(compartilhado);
+
+        notificacaoRepository.save(Notificacao.builder()
+                .userId(destinatarioId)
+                .tipo(Notificacao.TipoNotificacao.EVENTO_COMPARTILHADO)
+                .referenciaId(eventoId)
+                .remetenteId(remetenteId)
+                .remetenteNome(remetente.getNome())
+                .mensagem(remetente.getNome() + " compartilhou o evento \"" + evento.getTitulo() + "\" com você!")
+                .lida(false)
+                .criadoEm(System.currentTimeMillis())
+                .build());
+
+        log.info("Evento {} compartilhado por {} com {}", eventoId, remetenteId, destinatarioId);
+    }
+
     private EventoResponseDTO toDTO(Evento e, String userId) {
+        return toDTOCompartilhado(e, userId, new HashMap<>());
+    }
+
+    private EventoResponseDTO toDTOCompartilhado(Evento e, String userId, Map<String, String> compartilhadosPor) {
         boolean inscrito = userId != null &&
                 inscricaoRepository.findByEventoIdAndUserId(e.getId(), userId)
                         .map(i -> i.isAtiva())
                         .orElse(false);
+
+        String compartilhadoPor = compartilhadosPor.get(e.getId());
 
         return new EventoResponseDTO(
                 e.getId(), e.getOrganizadorId(), e.getOrganizadorNome(),
@@ -126,7 +202,9 @@ public class EventoService {
                 e.getNomeLocal(), e.getEndereco(), e.getLat(), e.getLng(),
                 e.getDescricao(), e.getOQueLevar(), e.getInfraestrutura(),
                 e.getMaxParticipantes(), e.getTotalInscritos(), inscrito,
-                e.getCriadoEm()
+                e.getCriadoEm(),
+                compartilhadoPor != null,
+                compartilhadoPor
         );
     }
 }
